--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -20,7 +20,7 @@
         <tr class="<%= cycle("odd", "even") %>">
 					<td><%= link_to product.code, product %></td>
           <td><%= link_to product.name, product_path(product) %></td>
-          <td><%= link_to product.consigner.biz_name ? product.consigner.biz_name : product.consigner.name, consigner_path(product.consigner) %></td>
+          <td><%= link_to product.consigner.name_or_bizname %></td>
 					<td><%= number_to_currency product.wholesale %></td>
 					<td><%= number_to_currency product.retail %></td>
 					<td><%= product.count > 0 ? product.count : "No Stock" %></td>
