--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 <body>
   <div id="container">
     <div id="header">
-      <h1><%= link_to "Delono", root_url(:subdomain => false) %></h1>
+      <h1><%= link_to "Delono", root_url %></h1>
 			<h3 class="title">Where Microbusiness meets Fair Trade</h3>
       <div id="user-navigation">
         <ul class="wat-cf">
