--- a/app/views/shared/_bottom_bar.html.erb
+++ b/app/views/shared/_bottom_bar.html.erb
@@ -1,7 +1,7 @@
 <div class="block">
   <h3>Links</h3>
   <ul class="navigation">
-    <li><a href="#">Link 1</a></li>
+    <li><%= link_to "Delono.com", root_url(:subdomain => false) %></li>
     <li><a href="#">Link 2</a></li>
   </ul>
 </div>
