Add uniqueness validation for consigner name and biz_name

--- a/app/views/businesses/edit.html.erb
+++ b/app/views/businesses/edit.html.erb
@@ -21,7 +21,7 @@
 					<%= f.input :email %>
 					<%= f.input :website %>
 					<%= f.input :fax %>
-					<%= f.input	:photo, :as => :file %>
+					<%= f.input	:image, :as => :file %>
 				<% end %>
 				<%= f.buttons %>
 			<% end %>
