--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<% semantic_form_for [@business, @product] do |f| %>
+<% semantic_form_for @product do |f| %>
 	<%= f.inputs %>
 <% end %>
         
